Bug 409218 - [Wayland] Spectacle does not take a screenshot when "Take a new screenshot" button is clicked
Summary: [Wayland] Spectacle does not take a screenshot when "Take a new screenshot" b...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-26 17:05 UTC by Patrick Silva
Modified: 2025-06-24 13:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-06-26 17:05:30 UTC
STEPS TO REPRODUCE
1. start Wayland session
2. press printscreen and enter to open Spectacle
3. click on "Take a new screenshot" button

OBSERVED RESULT
Spectacle window minimizes, its entry in the task manager becomes green
but the new screenshot is never taken.

EXPECTED RESULT
Spectacle takes a new screenshot.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.16.80
KDE Frameworks Version: 5.60.0
Qt Version: 5.12.3
Comment 1 Nate Graham 2019-06-28 20:07:46 UTC
There's a patch: https://phabricator.kde.org/D22148
Comment 2 David Redondo 2019-07-11 08:26:22 UTC
Git commit 4f1e7fa2302387244cfea2f9fd7b98728b4e9781 by David Redondo.
Committed on 11/07/2019 at 08:26.
Pushed by davidre into branch 'master'.

Fix on click not working

Summary:
When on click is enabled the timeout is always set to -1.
This breaks the logic inside captureScreenshot to display the progressbar in the
taskmanager.

Test Plan: Check on click or use spectacle in a wayland session

Reviewers: #spectacle, nicolasfella, ngraham

Reviewed By: #spectacle, ngraham

Subscribers: ngraham, anthonyfieroni

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D22148

M  +6    -0    src/Gui/KSMainWindow.cpp

https://commits.kde.org/spectacle/4f1e7fa2302387244cfea2f9fd7b98728b4e9781