Fix on click not working

Summary:
When on click is enabled the timeout is always set to -1.
This breaks the logic inside captureScreenshot to display the progressbar in the
taskmanager.

BUG: 409218

Test Plan: Check on click or use spectacle in a wayland session

Reviewers: #spectacle, nicolasfella, ngraham

Reviewed By: #spectacle, ngraham

Subscribers: ngraham, anthonyfieroni

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D22148